--- a/Assignments/style.css
+++ b/Assignments/style.css
@@ -443,8 +443,30 @@ button a:hover{
     }
 } */
 
-@media(max-width:669px){
-    footer .paragraphs .img1 p{
-        overflow: hidden;
+@media(max-width:400px){
+    .container{
+        max-width: 380px;
     }
+     header{
+        width:100%;
+        margin-bottom: 20px;
+        height:100vh;
+    }
+    header li{
+        padding:5px;
+        font-size: 15px;
+        margin-right: 20px;
+        display: flex;
+        padding: 55px;
+        margin-right: 35vh;
+    } 
+    header li:hover{
+        padding: 5px;
+    }
+    
+    article img{
+        width: 100%;
+        margin-top: 20px;
+    }
+
 }
