--- a/Assignments/style5.css
+++ b/Assignments/style5.css
@@ -8,7 +8,7 @@
     height: 100vh;
     /* background-image: url("../Assets/skyimagefinal.jpg"); */
     /* background-image: linear-gradient(blue,purple); */
-    background-image: url("./images/skyimage1.jpg");
+    background-image: url("./images/nightsky.webp");
     position: relative;
     overflow: hidden;
     background-repeat: no-repeat;
