--- a/Assignments/style5.css
+++ b/Assignments/style5.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+
     box-sizing: border-box;
 }
 .sky{
@@ -10,15 +11,17 @@
     /* background-image: linear-gradient(blue,purple); */
     background-image: url("./images/nightsky.webp");
     position: relative;
-    overflow: hidden;
     background-repeat: no-repeat;
     background-size: cover;
     /* transform: translateX(-50%); */
+    overflow: hidden;
+    /* z-index: 2; */
     
 }
 .sky img{
     width:100%;
     height:100vh;
+
     
 }
 .highway{
@@ -44,6 +47,8 @@
 .cycle img{
     position: absolute;
     top:70%;
+    width:20%;
+    z-index: 2;
 
     height:200px;
 }
@@ -75,18 +80,26 @@
 }
 .car{
     width: 400px;
-    height: 250px;
-    z-index: 2;
+    height: 200px;
+    /* z-index: 1; */
+    /* top:50%;
+    /* width:30%; */  
     /* border: 2px solid red; */
-    position: absolute;
-    left: 50%;
-    top:71%;
+    /* position: absolute; */
+    /* top:20%; */
     transition:transform 3s;
     transform: translateX(-50%);
+    position: absolute;
+    top:72%;
+    z-index: 2;
+
+    left: 50%;
+    height:200px;
 }
 .car img{
     width:100%;
     /* z-index: 2; */
+    height:130px;
     animation: car 1s linear infinite;
     /* background-image: url("../Assets/carimagefinal1.png"); */
     /* background-image: url("../Assets//carimagefinal1.png"); */
