--- a/Assignments/style15.css
+++ b/Assignments/style15.css
@@ -4,10 +4,18 @@
     box-sizing: border-box;
   }
   body {
-    background: linear-gradient(120deg, skyblue, blue);
+    /* background: linear-gradient(120deg, skyblue, blue); */
+    /* background-image: url("https://www.istockphoto.com/photo/to-do-list-text-on-notepad-gm1285308242-382184795?utm_source=unsplash&utm_medium=affiliate&utm_campaign=srp_photos_top&utm_content=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Fto-do-list-images&utm_term=to%20do%20list%20images%3A%3A%3A"); */
+    /* background-image: url("https://www.istockphoto.com/photo/to-do-list-text-on-notepad-gm1285308242-382184795?utm_source=unsplash&utm_medium=affiliate&utm_campaign=srp_photos_top&utm_content=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Fto-do-list-images&utm_term=to%20do%20list%20images%3A%3A%3A"); */
+    background-image: url("./images/imagetodo.jpg");
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Yellowtail', cursive;
+    background-repeat: no-repeat;
+    background-size: cover;
     min-height: 100vh;
+  }
+  input[type="text"]{
+    box-shadow: 2px 2px 4px grey;
   }
   header,
   form {
@@ -25,6 +33,8 @@
     padding: 10px;
     border: none;
     font-size: 24px;
+       font-family: 'Yellowtail', cursive;
+    ;
     background: white;
     outline: none;
   }
