--- a/Assignments/styleCanvas.css
+++ b/Assignments/styleCanvas.css
@@ -1,5 +1,5 @@
 #canvas{
-    /* background-image: linear-gradient(yellowgreen,green); */
+    background-image: linear-gradient(yellowgreen,green);
     border-radius: 5%;
     border: 2px solid red;
 
