--- a/Assignments/style21.css
+++ b/Assignments/style21.css
@@ -12,14 +12,20 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-image: url("https://media.istockphoto.com/photos/diamond-painting-diamond-embroidery-diy-diamond-painting-plastic-bags-picture-id1370902405?b=1&k=20&m=1370902405&s=170667a&w=0&h=YLEG1AMZtwQZt38mUJTwpsbGpEF7XBcqqPTIavimPQw=");
+    background-image: url("https://images.unsplash.com/photo-1511882150382-421056c89033?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fGNhbnZhcyUyMGdhbWV8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
     background-size: cover;
+
     
 }
-  #canvas {
+#source{
+  height:200px;
+  width:100px
+}
+canvas {
     margin-top: 10px;
-    background-color: azure;
+    background-image: linear-gradient(skyblue,grey);
     border-radius: 10px;
+    box-shadow:2px 2px 2px red;
   }
   
   #source {
