--- a/Assignments/styles14.css
+++ b/Assignments/styles14.css
@@ -110,6 +110,27 @@ h1 {
   top: 82%;
   left: 68%;
 }
-audio{
+/* audio{
   visibility: hidden;
-}
+} */
+.timer1,.timer3{
+    visibility: hidden;
+
+  }
+  h2{
+    text-align: center;
+    margin-top: -90px;
+    /* margin-left: -150px; */
+    font-size: 30px;
+    color:brown;
+  }
+
+  #final{
+    visibility: hidden;
+  }
+  #loss{
+    visibility: hidden;
+    width: 100%;
+    height: 100vh;
+  }
+  
